<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header android:fragment="com.lincanbin.carbonforum.SettingsActivity$GeneralPreferenceFragment"
        android:title="@string/pref_header_general" android:icon="@drawable/ic_info_24dp" />

    <header
        android:fragment="com.lincanbin.carbonforum.SettingsActivity$NotificationPreferenceFragment"
        android:title="@string/pref_header_notifications"
        android:icon="@drawable/ic_notifications_24dp" />

    <header android:fragment="com.lincanbin.carbonforum.SettingsActivity$DataSyncPreferenceFragment"
        android:title="@string/pref_header_data_sync" android:icon="@drawable/ic_sync_24dp" />

</preference-headers>
