<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".index">
       <item android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/action_search"
            android:orderInCategory="80"
            app:showAsAction="never" />
        <item android:id="@+id/action_share"
            android:title="@string/action_share"
            android:orderInCategory="90"
            android:icon="@drawable/ic_share_white_24dp"
            app:showAsAction="never" />
        <item android:id="@+id/action_settings"
            android:title="@string/action_settings"
            android:orderInCategory="100"
            app:showAsAction="never"/>
</menu>
